@@ -10,21 +10,22 @@ configure(allprojects) {
   repositories {
     mavenLocal()
     mavenCentral()
-    maven { url = "https://oss.sonatype.org/content/repositories/snapshots/" }
+    maven { url = "https://central.sonatype.com/repository/maven-snapshots/" }
   }
 }
 
 dependencies {
-  implementation 'cn.taketoday:today-starter-netty'
-  implementation 'cn.taketoday:today-starter-json'
-  implementation 'cn.taketoday:today-starter-jdbc'
-  implementation 'cn.taketoday:today-starter-web'
-  implementation 'cn.taketoday:today-starter-freemarker'
+  implementation 'cn.taketoday:infra-starter-application'
+  implementation 'cn.taketoday:infra-starter-netty-server'
+  implementation 'cn.taketoday:infra-starter-json'
+  implementation 'cn.taketoday:infra-starter-jdbc'
+  implementation 'cn.taketoday:infra-starter-persistence'
+  implementation 'cn.taketoday:infra-starter-webmvc'
+  implementation 'cn.taketoday:infra-starter-freemarker'
 
-  implementation 'mysql:mysql-connector-java'
+  implementation 'com.mysql:mysql-connector-j'
 
   implementation 'ch.qos.logback:logback-classic'
-  implementation 'com.github.ben-manes.caffeine:caffeine'
 
   implementation('io.netty:netty-transport-native-epoll') {
     artifact {
@@ -32,23 +33,35 @@ dependencies {
     }
   }
 
-  implementation('io.netty.incubator:netty-incubator-transport-native-io_uring:0.0.21.Final') {
+  implementation("io.netty:netty-transport-native-epoll") {
+    artifact {
+      classifier = 'linux-aarch_64'
+    }
+  }
+
+  implementation("io.netty:netty-transport-native-kqueue") {
+    artifact {
+      classifier = 'osx-aarch_64'
+    }
+  }
+
+  implementation('io.netty:netty-transport-native-io_uring') {
+    artifact {
+      classifier = 'linux-aarch_64'
+    }
+  }
+
+  implementation('io.netty:netty-transport-native-io_uring') {
     artifact {
       classifier = 'linux-x86_64'
     }
   }
 
-//  implementation('io.netty:netty-transport-native-kqueue') {
-//    artifact {
-//      classifier = 'osx-aarch_64'
-//    }
-//  }
-
 }
 
 java {
-  sourceCompatibility = JavaVersion.VERSION_21
-  targetCompatibility = JavaVersion.VERSION_21
+  sourceCompatibility = JavaVersion.VERSION_25
+  targetCompatibility = JavaVersion.VERSION_25
 }
 
 application {
@@ -65,6 +78,7 @@ application {
       "-Dio.netty.leakDetection.level=disabled",
       "-Dio.netty.iouring.iosqeAsyncThreshold=32000",
       "-Djava.lang.Integer.IntegerCache.high=10000",
+      "--enable-native-access=ALL-UNNAMED",
       "--add-opens=java.base/java.nio=ALL-UNNAMED",
       "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"
   ]
